<resources>
    <string name="app_name">正点火车</string>
    <string name="station">车站</string>
    <string name="train_number">车次</string>
    <string name="depart_date">出发日期</string>
    <string name="query_time_info">查询时刻</string>
    <string name="please_input_train_number">请输入车次</string>
    <string name="please_input_station">请输入出发/到达站点</string>
    <string name="format_date">%1$s-%2$s-%3$s</string>
    <string name="format_time">%1$02d:%2$02d</string>
    <string name="format_departure_date">出发日期：%1$s</string>
    <string name="querying_train_time">正在查询列车到站/离站时刻</string>
    <string name="query_failed_try_again">查询失败，稍后重试</string>
    <string name="title_activity_add_travel">添加行程</string>
    <string name="save">保存</string>
    <string name="depart_time">出发时间</string>
    <string name="is_fetching_stations">正在获取车站列表</string>
    <string name="fetching_station_failed">获取车站失败，请稍后重试</string>
    <string name="format_station_info">%1$s - %2$s</string>
    <string name="please_fill_train_depart_time">请输入火车出发时间</string>
    <string name="station_not_exist">你输入的站点不存在</string>
    <string name="no_arrive_time_info">尚无列车到达时间信息</string>
    <string name="no_depart_time_info">尚无列车出发时间信息</string>
    <string name="add_reminder">添加提醒</string>
    <string name="already_reminded">已提醒</string>
    <string name="no_time">暂无</string>
    <string name="confirm_add_reminder">确认添加提醒？</string>
</resources>
