<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin" tools:context=".MainActivity">

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_edit_station"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <EditText
            android:id="@+id/edit_station"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/station"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_edit_train_number"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">
        <EditText
            android:id="@+id/edit_train_number"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/train_number"/>
    </android.support.design.widget.TextInputLayout>

    <android.support.design.widget.TextInputLayout
        android:id="@+id/layout_depart_date"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/margin_medium">
        <EditText
            android:id="@+id/depart_date"
            android:inputType="none"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/depart_date"/>
    </android.support.design.widget.TextInputLayout>
</LinearLayout>
