<?xml version="1.0" encoding="utf-8"?>
<android.support.v7.widget.CardView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    android:background="@android:color/white">
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">
        <RelativeLayout
            android:id="@+id/card_header_wrapper"
            android:layout_height="wrap_content"
            android:layout_width="match_parent"
            android:background="@mipmap/train_back_1">
            <TextView
                android:id="@+id/card_train_number"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="16dp"
                android:textColor="@color/colorPrimary"
                android:textSize="23sp"
                tools:text="G460"/>
            <View
                android:id="@+id/card_header_line"
                android:layout_below="@id/card_train_number"
                android:layout_centerHorizontal="true"
                android:layout_width="100dp"
                android:layout_height="2dp"
                android:background="@android:color/white"
                android:layout_marginTop="12dp"
                android:layout_marginBottom="12dp"
                android:layout_marginLeft="16dp"
                android:layout_marginRight="16dp"
                />
            <TextView
                android:id="@+id/card_train_station"
                android:layout_below="@id/card_header_line"
                android:layout_centerHorizontal="true"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/colorPrimary"
                android:textSize="23sp"
                tools:text="武汉"/>
            <TextView
                android:id="@+id/card_train_arrive_time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_toLeftOf="@id/card_header_line"
                android:layout_toStartOf="@id/card_header_line"
                android:layout_alignTop="@id/card_train_number"
                android:layout_alignBottom="@id/card_train_station"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="12:34" />
            <TextView
                android:id="@+id/card_train_depart_time"
                android:layout_height="wrap_content"
                android:layout_width="wrap_content"
                android:layout_toRightOf="@id/card_header_line"
                android:layout_toEndOf="@id/card_header_line"
                android:layout_alignTop="@id/card_train_number"
                android:layout_alignBottom="@id/card_train_station"
                android:gravity="center"
                android:textColor="@android:color/white"
                android:textSize="30sp"
                android:textStyle="bold"
                tools:text="12:54" />
            <TextView
                android:id="@+id/card_depart_date"
                android:layout_height="wrap_content"
                android:layout_width="match_parent"
                android:layout_marginTop="32dp"
                android:layout_below="@id/card_train_station"
                android:background="#9B9B9B99"
                android:textColor="@android:color/white"
                android:gravity="right"
                android:paddingRight="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="8dp"
                android:textSize="16sp"
                tools:text="2015年11月2日"
                />
        </RelativeLayout>
        
        <TextView
            android:id="@+id/card_train_arrival_info"
            android:layout_marginTop="8dp"
            android:layout_below="@id/card_header_wrapper"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/font_color_secondary"
            android:textSize="16sp"
            android:text="@string/no_arrive_time_info"
            android:gravity="center_vertical"
            />

        <TextView
            android:id="@+id/card_train_depart_info"
            android:layout_marginTop="8dp"
            android:layout_below="@id/card_train_arrival_info"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/font_color_secondary"
            android:textSize="16sp"
            android:text="@string/no_depart_time_info"
            android:gravity="center_vertical"
            />

        <TextView
            android:id="@+id/reminder_btn"
            android:clickable="true"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginTop="12dp"
            android:layout_marginBottom="12dp"
            android:layout_below="@id/card_train_depart_info"
            android:textSize="16sp"
            android:textColor="@color/reminder_color"
            android:drawableLeft="@drawable/alert_selector"
            android:text="@string/add_reminder"
            />
    </RelativeLayout>

</android.support.v7.widget.CardView>
